[workspace]
resolver = "2"
members = ["tf_rosrust", "tf_r2r", "tf_rclrs"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smilerobotics/tf_rosrust"
authors = [
    "Arjo Chakravarty <arjo129@gmail.com>",
    "Michael Maerz <maerz@magazino.eu>",
    "Mitsuharu Kojima <kojima@smilerobotics.com>",
]
keywords = ["transforms", "robotics", "ROS", "tf"]
categories = ["science::robotics"]

[workspace.dependencies]
futures = "0.3"
nalgebra = "0.30"
r2r = "0.8"
rclrs = "0.4"
rosrust = "0.9"
thiserror = "1.0"
tokio = "1"

[workspace.lints.rust]
# missing_debug_implementations = "warn" # TODO: Most rosrust types don't implement Debug
# missing_docs = "warn" # TODO
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
