[package]
name = "tf2_r2r"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["transforms", "robotics", "ROS", "tf"]
categories = ["science::robotics"]

[features]
ros2 = ["r2r"]

[dependencies]
futures.workspace = true
nalgebra.workspace = true
r2r = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
