<?xml version="1.0"?>
<package format="3">
  <name>tf_rclrs</name>
  <version>0.0.1</version>
  <description>tf implementation for rclrs</description>
  <maintainer email="stelzo@steado.de">Christopher Sieh</maintainer>
  <license>Apache2</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
  </export>
</package>