[package]
name = "tf_rosrust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = [
    "Arjo Chakravarty <arjo129@gmail.com>",
    "Michael Maerz <maerz@magazino.eu>",
    "Mitsuharu Kojima <kojima@smilerobotics.com>",
]
description = "This is a rust port of the [ROS tf library](http://wiki.ros.org/tf). It is intended for being used in robots to help keep track of multiple coordinate frames and is part of a larger suite of rust libraries that provide support for various robotics related functionality."
keywords = ["transforms", "robotics", "ROS", "tf"]
categories = ["science::robotics"]

[dependencies]
rosrust.workspace = true
nalgebra.workspace = true
thiserror.workspace = true

[lints]
workspace = true
