[package]
name = "tf_rosrust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = """
This is a rust port of the [ROS tf library](http://wiki.ros.org/tf).
It is intended for being used in robots to help keep track of multiple coordinate
frames and is part of a larger suite of rust libraries that provide support for
various robotics related functionality.
This supports ROS1 using rosrust crate.
"""

[dependencies]
rosrust.workspace = true
nalgebra.workspace = true
thiserror.workspace = true

[lints]
workspace = true
